k8s/k8s-05/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:latest

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
  - name: frontend
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: praqma/network-multitool

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
  - name: backend
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: backend
